# ESAB

./: .gitignore  .pylintrc  CONTRIBUTING.adoc  Jenkinsfile  MANIFEST.in  README.md  audit_packages.py  build_clean.py  debug_map.py  debug_qrc.py  frontend_gui_design_plan.md  patch_build.py  pdf_text.txt  pyproject.toml  re_trigger.txt  run_gui.py  setup.cfg  setup.py
.sisyphus/plans/: pyat-seabed-segmentation.md  wc-frontend-design.md
data/raw/: bsbd-0.9.3_f.emo  fill_holes.dtm.nc  fill_holes_mask.kml  reset_cell_multi_cdi.nc  slope_testA.emo  slope_testB.emo
docs/: antora-playbook.yml  antora.yml  generate_parameters_doc.py
gui/: __init__.py  app.py  main_window.py  project_explorer.py
gui/core/: __init__.py  (+4 more)
gws/: JenkinsfileGws  README_WARNING.md  miniconda_readme.md  pack_miniconda_linux.bat  pack_miniconda_win.bat
md/: summary.md
private_packages/: heightmap_interpolation-1.0.6-py3-none-any.whl  pygws-0.3.0-py3-none-any.whl  pynvi-0.15-py3-none-any.whl  pytechsas-0.15.0-py3-none-any.whl  pytide-0.0.7-py3-none-any.whl  rsocket-0.4.15-py3-none-any.whl  sonar_netcdf-0.2.12-py3-none-any.whl  sonarnative-2.0.4-cp310-cp310-win_amd64.whl
requirements/: __init__.py  create_anaconda_environments.py  requirements_pyat_dev_linux.yml  requirements_pyat_dev_windows.yml  requirements_pyat_runtime.yml  requirements_pyat_test.yml
scratch/: analyze_optimizations.py  check_env.py  check_real_diffs.py  compare_dirs.py  compare_result.json  diff_bs_correction.py  diff_output.txt  fix_typo.py  make_svgs.py  sync_optimizations.py  test_extensions.py
tests/: Readme.md  directory_utils.py  file_test_installer.py
(+918 files in other folders)
